# pretix-oidc

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_oidc/: __init__.py  api.py  apps.py  auth.py  forms.py  models.py  oidc_connector.py  signals.py  urls.py  views.py
pretix_oidc/locale/: django.pot
pretix_oidc/locale/de/LC_MESSAGES/: django.po
pretix_oidc/locale/de_Informal/LC_MESSAGES/: django.po
pretix_oidc/migrations/: 0001_initial.py  0002_auto_20200919_2030.py  0003_oidc_backchannel_logout.py
pretix_oidc/templates/pretix_oidc/: oidc_assignment_rule_delete.html  oidc_assignment_rule_edit.html  oidc_assignment_rules.html
tests/: test_api.py
